--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-svg-loader": "^2.1.0",
     "save-dev": "^2.0.0",
     "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9"
